Improve LocalTrip hourly plan cards